fixup! feat: add visualization params form page
add noOverlappedCampaigns validator

--- a/frontend/app/components/visualization-params-form/visualization-params-form.component.css
+++ b/frontend/app/components/visualization-params-form/visualization-params-form.component.css
@@ -34,3 +34,7 @@
 .campaigns-form-container button {
   margin: 0;
 }
+
+.alert {
+  margin-top: 1rem;
+}
